<resources>
    <string name="app_name">FireBase</string>
    <string name="title_activity_add_post">AddPost</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="btn_signin_text">Sign In</string>
    <string name="btn_signup_text">Sign Up</string>
    <string name="post_title">Title</string>
    <string name="post_content">Content</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

</resources>
